# Point-Cloud-Preprocessing-Tools

./: .gitignore  .gitmodules  BatchCloudManip.cpp  BatchCloudManip.h  BatchMultiBevGen.cpp  BatchMultiBevGen.h  BatchTopPartRegistration copy.cpp  BatchTopPartRegistration.cpp  BatchWholeRegistration.cpp  CMakeLists.txt  CloudManip.cpp  CloudManip.h  CustomPointTypes.h  KittiPointCloudSelect.cpp  KittiPointCloudSelect.h  KittiRawPointCloudSelect.cpp  MulranPointCloudSelect.cpp  MulranPointCloudSelect.h  OxfordPointCloudSelect.cpp  OxfordPointCloudSelect.h  README.md  TopPartRegistration.cpp  flat_cloud_1_ds.pcd  flat_cloud_1_ds_aligned.pcd  flat_cloud_2_ds.pcd  full_cloud_1_ds.pcd  full_cloud_1_ds_aligned.pcd  full_cloud_2_ds.pcd  main.cpp
include/: Utility.h
src/: Normal2dEstimation.cpp  PCA2D.cpp  Utility.cpp
